--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
      context: .
      dockerfile: Dockerfile
    environment:
+     JWT_SECRET_KEY: "125876237860748631478297193266074806950"
      PORT: "8080"
    ports:
      - "8080:8080"
