--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ alembic==1.12.1
 apispec==6.3.0
 blinker==1.6.2
 click==8.1.7
-flask==3.0.0
+Flask==3.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 flask-smorest==0.42.2
-flask-sqlalchemy==3.1.1
+Flask-SQLAlchemy==3.1.1
 greenlet==3.0.1
 importlib-metadata==6.8.0
 importlib-resources==6.1.1
@@ -16,9 +17,10 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.2
 psycopg2-binary==2.9.9
+PyJWT==2.8.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.23
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 webargs==8.3.0
-werkzeug==3.0.0
+Werkzeug==3.0.0
 zipp==3.17.0
